--- a/index.html
+++ b/index.html
@@ -101,7 +101,31 @@
             <div class="timeline-line"></div>
 
             <!-- ===== System 1 ===== -->
-             <div class="timeline-item ">
+            <div class="timeline-item">
+
+                <div class="timeline-content left">
+                    <h2>PPMS</h2>
+                    <p>
+                        Production Planning Monitoring System - Plan and monitor production schedules, manage workflow
+                        timelines,
+                        and optimize resource allocation across K9, K10, and K11 lines.
+                    </p>
+                </div>
+
+                <div class="timeline-circle"></div>
+
+                <div class="timeline-card right">
+                    <a href="https://morsyadham.github.io/Planning-Monitoring-System/login.html"
+                        target="_blank">
+                        <img src="assets/logo_ppms.png" alt="PPMS Logo">
+                        <span class="btn">Enter System</span>
+                    </a>
+                </div>
+
+            </div>
+
+            <!-- ===== System 2 ===== -->
+            <div class="timeline-item ">
 
                 <div class="timeline-card left">
                     <a href="https://morsyadham.github.io/SIMS-V3/login.html" target="_blank">
@@ -115,7 +139,8 @@
                 <div class="timeline-content right">
                     <h2>SIMS</h2>
                     <p>
-                        Monitor operational data, generate reports, and get a quick overview
+                        Shipment Inspection Monitoring System - Monitor operational data, generate reports, and get a
+                        quick overview
                         of system performance.
                     </p>
 
@@ -123,13 +148,14 @@
 
             </div>
 
-            <!-- ===== System 2 ===== -->
+            <!-- ===== System 3 ===== -->
             <div class="timeline-item">
 
                 <div class="timeline-content left">
-                    <h2>Assembly Production Monitoring</h2>
+                    <h2>APMS</h2>
                     <p>
-                        Track K9, K10, and K11 assembly production lines, monitor delivery status,
+                        Assembly Production Monitoring System - Track K9, K10, and K11 assembly production lines,
+                        monitor delivery status,
                         and check workflow efficiency.
                     </p>
                 </div>
@@ -149,7 +175,8 @@
 
 
     <!-- ================= FOOTER ================= -->
-    <footer style="text-align:center; padding:3rem; font-size:1.2rem; opacity:0.7; background:rgba(255, 255, 255, 0.12);">
+    <footer
+        style="text-align:center; padding:3rem; font-size:1.2rem; opacity:0.7; background:rgba(255, 255, 255, 0.12);">
         © 2026 Adham Morsy – All Systems Integrated
     </footer>
 
